# RegularProcession

./: CMakeLists.txt  Process_regular_expression.cpp  Process_regular_expression.h  README.md  regular_adapter.cpp  regular_adapter.h  sequence_regulars.cpp  sequence_regulars.h  test.cpp
